K8s/base/imageprovider/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imageprovider
  labels:
    app: imageprovider
    app.kubernetes.io/version: "1.12.0"
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: imageprovider
  template:
    metadata:
      labels:
        app: imageprovider
    spec:
      containers:
        - name: imageprovider
          image: ghcr.io/open-telemetry/demo:1.12.0-imageprovider
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: service
          resources:
            requests:
              cpu: "50m"
              memory: "25Mi"
            limits:
              cpu: "100m"
              memory: "50Mi"
