K8s/base/imageprovider/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: imageprovider
spec:
  podSelector:
    matchLabels:
      app: imageprovider
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontendproxy
        - podSelector:
            matchLabels:
              app: productcatalogservice
      ports:
        - port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: opentelemetry-demo-otelcol
      ports:
        - port: 4317
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
